--- a/styles/sass/screen.sass
+++ b/styles/sass/screen.sass
@@ -117,7 +117,7 @@ p
 #main-menu
 	display: none
 	position: absolute
-	z-index: 100
+	z-index: 999999999
 	background-color: #ffffff
 	top: 50px
 	left: 0px
